<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- *********************************************************
    These strings are accessed in XML via the syntax
        android:text="@string/[NAME]"

    Where name is defined below

    From Code:
        String mystring = getResources().getString(R.string.mystring);

    ************************************************************-->

    <string name="app_name">SDW Club App</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_splash_screen">SDW</string>
    <string name="title_activity_main_activity2">SDW TT Programme</string>
    <string name="title_activity_upcoming_event">TT Event</string>
    <string name="title_activity_completed_event">Completed TT</string>
    <string name="title_activity_season_standing">Season Standing</string>


    <string name="register_button_text">Register</string>
    <string name="refreshing_data">Data is being retrieved</string>

    <string name="page_upcoming">Forthcoming</string>
    <string name="page_completed">Finished</string>
    <string name="page_standings">Standings</string>
    <string name="page_goride">Go-Ride</string>
    <string name="page_opens">Opens</string>
    <string name="page_social">Social</string>

    <string name="LONG_DATE_FORMAT">EEE d-MMM-yyyy HH:mm</string>
    <string name="SHORT_DATE_FORMAT">d-MMM HH:mm</string>

    <string name="action_event_records">Records</string>
    <string name="action_event_performance">Me</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="no_tt_entries">No Entries Yet!</string>

    <string name="std_scratch_button">Scr</string>
    <string name="std_name_button">Name</string>
    <string name="std_handicap_button">Hcp</string>
    <string name="club_url">southborough-wheelers.co.uk</string>
    <string name="std_scratch_comp_button">Scratch</string>
    <string name="std_handicap_comp_button">Handicap</string>
    <string name="std_scrpoints_button">Pts</string>
    <string name="std_hcppoints_button">Pts</string>
    <string name="std_scrtime_button">Time</string>
    <string name="std_hcptime_button">Time</string>
    <string name="std_position_button">Pos</string>


    <string name="stdtable_dateprefix">dd/MM-</string>
    <string name="stdtable_participant_heading">Name</string>
    <string name="stdtable_entrycount_heading">Entered</string>
    <string name="stdtable_best_heading">Best 10 Pts</string>
    <string name="stdtable_total_heading">Total Pts</string>

    <string name="res_position_button">Pos</string>
    <string name="res_name_button">Rider</string>
    <string name="res_time_button">Time</string>
    <string name="res_points_button">Pts</string>
    <string name="std_date_entered_button">Entered</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Draw Open</string>
    <string name="drawer_close">Draw Closed</string>
    <string name="std_competition">Comp</string>
    <string name="std_winner">Winner</string>
    <string name="sdw_gen_time">Time</string>
    <string name="std_dns">DNS/DNF</string>
    <string name="std_officials">Race Officials</string>
    <string name="std_racereport">Race Report</string>


</resources>
