<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/eventScratchResult"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.uk.greer.sdwapp.activity.completed.CompletedEventScratchResultFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/stdHeader"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/stdPositionBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:background="@drawable/sortable_header"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:tag="position"
            android:text="@string/std_position_button"
            android:textSize="12sp" />

        <Button
            android:id="@+id/stdHeaderNameBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7.10"
            android:background="@drawable/sortable_header"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:tag="firstname, lastname"
            android:text="@string/std_name_button"
            android:textSize="12sp" />

        <Button
            android:id="@+id/stdHeaderScratchTimeBtn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:background="@drawable/sortable_header"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:tag="scrpts"
            android:text="@string/std_scrtime_button"
            android:textSize="12sp" />

        <Button
            android:id="@+id/stdHeaderScratchPtsBtn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:background="@drawable/sortable_header"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:tag="scratchpoints"
            android:text="@string/std_scrpoints_button"
            android:textSize="12sp" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/stdHeader">

        <ProgressBar
            android:id="@+id/waitingProgressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/waitingMessage"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:text="@string/refreshing_data"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ListView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/standingListView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:gravity="center" />
    </FrameLayout>


</RelativeLayout>
