<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.uk.greer.sdwapp.activity.upcoming.EntriesListFragment"
    android:id="@+id/upcomingEntriesListLayout"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

<!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/stdHeader"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true">


        <Button
            android:id="@+id/stdHeaderNameBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:background="@drawable/sortable_header"
            android:text="@string/std_name_button"
            android:paddingRight="5dp"
            android:tag="firstname, lastname"
            android:paddingLeft="5dp" />

        <Button
            android:id="@+id/stdDateEnteredBtn"
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.4"
            android:text="@string/std_date_entered_button"
            android:background="@drawable/sortable_header"
            android:paddingLeft="5dp"
            android:tag="scrpts"
            android:paddingRight="5dp"
             />
    </LinearLayout>


    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/frameLayout"
        android:layout_below="@id/stdHeader"
        android:layout_above="@id/button_bar">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/waitingProgressBar"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/refreshing_data"
            android:id="@+id/waitingMessage"
            android:layout_gravity="bottom|center_horizontal"
            android:gravity="center"
            android:paddingBottom="20dp" />

        <ListView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/entriesListView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_gravity="center" />
    </FrameLayout>




</RelativeLayout>
